--- a/Toy_2/Base.lproj/Main.storyboard
+++ b/Toy_2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="c3s-WG-zYc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Cats Log-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Toy_2" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZyQ-Sq-usL">
-                                <rect key="frame" x="31" y="93" width="55" height="18"/>
+                                <rect key="frame" x="31" y="137" width="55" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="WS9-IA-XQo"/>
                                 </constraints>
@@ -27,26 +27,26 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Class Year:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9G-fJ-kru">
-                                <rect key="frame" x="31" y="158" width="85" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Class Year:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9G-fJ-kru">
+                                <rect key="frame" x="31" y="201" width="85" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EJs-pg-Wou">
-                                <rect key="frame" x="31" y="119" width="290" height="30"/>
+                                <rect key="frame" x="31" y="163" width="290" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZDR-tH-DpS">
-                                <rect key="frame" x="31" y="186" width="290" height="30"/>
+                                <rect key="frame" x="31" y="230" width="290" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6IO-Sm-U3s">
-                                <rect key="frame" x="153" y="261" width="68" height="39"/>
+                                <rect key="frame" x="153" y="305" width="68" height="39"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="39" id="2vu-9e-PFO"/>
                                     <constraint firstAttribute="height" constant="39" id="FrV-Nh-gnL"/>
@@ -58,8 +58,18 @@
                                     <action selector="SubmitButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xGf-Ow-ok5"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RSB-nb-jyQ">
+                                <rect key="frame" x="135" y="380" width="105" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="WaC-R6-Xgc"/>
+                                </constraints>
+                                <state key="normal" title="Go To My Cats!"/>
+                                <connections>
+                                    <segue destination="8St-N9-BMk" kind="show" id="12i-XU-q7K"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nothing to see" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6HQ-xb-T0T">
-                                <rect key="frame" x="65" y="323" width="244" height="21"/>
+                                <rect key="frame" x="65" y="344" width="244" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="6RN-Jt-V0c"/>
                                 </constraints>
@@ -80,8 +90,11 @@
                             <constraint firstItem="EJs-pg-Wou" firstAttribute="leading" secondItem="ZyQ-Sq-usL" secondAttribute="leading" id="DWo-ZE-Ib3"/>
                             <constraint firstItem="ZDR-tH-DpS" firstAttribute="top" secondItem="m9G-fJ-kru" secondAttribute="bottom" constant="8" symbolic="YES" id="IUP-3A-FH5"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EJs-pg-Wou" secondAttribute="trailing" constant="54" id="LLn-ZO-eey"/>
+                            <constraint firstItem="RSB-nb-jyQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="135" id="Nad-0a-4zV"/>
                             <constraint firstItem="m9G-fJ-kru" firstAttribute="top" secondItem="EJs-pg-Wou" secondAttribute="bottom" constant="8" symbolic="YES" id="TUJ-3m-GrZ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6HQ-xb-T0T" secondAttribute="bottom" constant="323" id="Usm-kB-ha3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6HQ-xb-T0T" secondAttribute="bottom" constant="302" id="Usm-kB-ha3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="RSB-nb-jyQ" secondAttribute="bottom" constant="257" id="Vyh-1r-XDg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RSB-nb-jyQ" secondAttribute="trailing" constant="135" id="WUt-jS-qeF"/>
                             <constraint firstItem="EJs-pg-Wou" firstAttribute="leading" secondItem="m9G-fJ-kru" secondAttribute="leading" id="XCu-rT-ryX"/>
                             <constraint firstItem="6IO-Sm-U3s" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="153" id="dB7-E1-AVJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6HQ-xb-T0T" secondAttribute="trailing" constant="66" id="eQY-DB-hSA"/>
@@ -93,6 +106,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Cats Log" id="6Q2-Qs-cRv"/>
                     <connections>
                         <outlet property="ClassLabel" destination="m9G-fJ-kru" id="heh-yz-pfk"/>
                         <outlet property="ClassTextField" destination="ZDR-tH-DpS" id="rEL-3K-SQp"/>
@@ -103,6 +117,75 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1004" y="98.50074962518741"/>
+        </scene>
+        <!--Cat Table View Controller-->
+        <scene sceneID="U4z-6y-ZEe">
+            <objects>
+                <tableViewController id="8St-N9-BMk" customClass="CatTableViewController" customModule="Toy_2" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="4gt-mZ-Hjp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="98" id="5Hc-Gm-0tY" customClass="CatTableViewCell" customModule="Toy_2" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="98"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5Hc-Gm-0tY" id="ZBH-PQ-BQm">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="97.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vtl-JP-9Bh">
+                                            <rect key="frame" x="232" y="8" width="127" height="81.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="127" id="MJb-O8-jRA"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Iu-n8-rcX">
+                                            <rect key="frame" x="37" y="38.5" width="166" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Vtl-JP-9Bh" firstAttribute="leading" secondItem="4Iu-n8-rcX" secondAttribute="trailing" constant="29" id="4d0-7X-INE"/>
+                                        <constraint firstItem="4Iu-n8-rcX" firstAttribute="centerY" secondItem="Vtl-JP-9Bh" secondAttribute="centerY" id="9ch-XJ-2cY"/>
+                                        <constraint firstItem="Vtl-JP-9Bh" firstAttribute="top" secondItem="ZBH-PQ-BQm" secondAttribute="topMargin" constant="-3" id="Su8-YN-TRy"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="4Iu-n8-rcX" secondAttribute="bottom" constant="28" id="VWW-1X-jMN"/>
+                                        <constraint firstItem="4Iu-n8-rcX" firstAttribute="centerY" secondItem="ZBH-PQ-BQm" secondAttribute="centerY" id="aeE-5A-CHo"/>
+                                        <constraint firstItem="Vtl-JP-9Bh" firstAttribute="trailing" secondItem="ZBH-PQ-BQm" secondAttribute="trailingMargin" id="bpS-Wr-SPb"/>
+                                        <constraint firstItem="4Iu-n8-rcX" firstAttribute="leading" secondItem="ZBH-PQ-BQm" secondAttribute="leadingMargin" constant="21" id="d84-4b-A8v"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="8St-N9-BMk" id="BZN-Qe-dqe"/>
+                            <outlet property="delegate" destination="8St-N9-BMk" id="V1h-ij-hh9"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fEz-ax-nrd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1746.4000000000001" y="97.601199400299862"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="dai-z5-0zR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="c3s-WG-zYc" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GEP-Oj-QA3">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="uIj-HU-P3c"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fka-xn-rx2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="64.799999999999997" y="98.50074962518741"/>
         </scene>
