--- a/Toy_2/Base.lproj/Main.storyboard
+++ b/Toy_2/Base.lproj/Main.storyboard
@@ -106,7 +106,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Cats Log" id="6Q2-Qs-cRv"/>
+                    <navigationItem key="navigationItem" title="Cats Log" id="6Q2-Qs-cRv">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="zjK-Kx-7Vs">
+                            <connections>
+                                <segue destination="Qsr-oj-n38" kind="presentation" id="Cvw-mq-prx"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="ClassLabel" destination="m9G-fJ-kru" id="heh-yz-pfk"/>
                         <outlet property="ClassTextField" destination="ZDR-tH-DpS" id="rEL-3K-SQp"/>
@@ -119,6 +125,86 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1004" y="98.50074962518741"/>
+        </scene>
+        <!--Add Cat-->
+        <scene sceneID="hfJ-Di-LHV">
+            <objects>
+                <viewController id="bSH-UF-ylJ" customClass="AddCatViewController" customModule="Toy_2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yUc-Lj-StA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gvZ-C7-wve">
+                                <rect key="frame" x="67" y="177" width="240" height="312"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="312" id="rNU-MK-3rm"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddCatCell" rowHeight="208" id="9bv-fb-XfM" customClass="AddCatTableViewCell" customModule="Toy_2" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="240" height="208"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9bv-fb-XfM" id="FcS-9c-Qah">
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="207.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="NDt-tE-xFE">
+                                                    <rect key="frame" x="0.0" y="0.0" width="240" height="207.5"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RGA-Ay-6gd">
+                                                    <rect key="frame" x="0.0" y="0.0" width="240" height="207.5"/>
+                                                </pickerView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="NDt-tE-xFE" firstAttribute="top" secondItem="FcS-9c-Qah" secondAttribute="top" constant="39" id="7vF-rd-RHs"/>
+                                                <constraint firstAttribute="bottom" secondItem="NDt-tE-xFE" secondAttribute="bottom" id="Cl3-iG-Z5h"/>
+                                                <constraint firstAttribute="trailing" secondItem="RGA-Ay-6gd" secondAttribute="trailing" id="QTg-kn-ZGY"/>
+                                                <constraint firstAttribute="bottom" secondItem="RGA-Ay-6gd" secondAttribute="bottom" id="SOn-cT-KYa"/>
+                                                <constraint firstItem="RGA-Ay-6gd" firstAttribute="leading" secondItem="FcS-9c-Qah" secondAttribute="leading" id="d7g-Gp-30y"/>
+                                                <constraint firstItem="NDt-tE-xFE" firstAttribute="top" secondItem="FcS-9c-Qah" secondAttribute="top" id="fJi-oW-M4h"/>
+                                                <constraint firstItem="RGA-Ay-6gd" firstAttribute="top" secondItem="FcS-9c-Qah" secondAttribute="top" id="fRe-F0-739"/>
+                                                <constraint firstAttribute="trailing" secondItem="NDt-tE-xFE" secondAttribute="trailing" id="gxK-MO-zh4"/>
+                                                <constraint firstItem="NDt-tE-xFE" firstAttribute="leading" secondItem="FcS-9c-Qah" secondAttribute="leading" id="rMs-rS-EPP"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="PickerView" destination="RGA-Ay-6gd" id="kf8-hx-Jn8"/>
+                                            <outlet property="TextView" destination="NDt-tE-xFE" id="zTz-eo-aTQ"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="gvZ-C7-wve" firstAttribute="leading" secondItem="ekR-sP-XYD" secondAttribute="leading" constant="67" id="MUQ-4y-rEC"/>
+                            <constraint firstItem="gvZ-C7-wve" firstAttribute="top" secondItem="ekR-sP-XYD" secondAttribute="top" constant="113" id="aoC-Z8-PLj"/>
+                            <constraint firstItem="ekR-sP-XYD" firstAttribute="trailing" secondItem="gvZ-C7-wve" secondAttribute="trailing" constant="68" id="y8g-Eu-Cjb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ekR-sP-XYD"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Cat" id="rnL-n0-jlM">
+                        <barButtonItem key="leftBarButtonItem" title="Clear" id="0RA-aQ-pa0">
+                            <connections>
+                                <action selector="ClearButtonTapped:" destination="bSH-UF-ylJ" id="4dB-Rb-rDw"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="DOp-0r-dWy">
+                            <connections>
+                                <action selector="DoneButtonTapped:" destination="bSH-UF-ylJ" id="nx9-Vc-1BG"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="TableView" destination="gvZ-C7-wve" id="FJW-w1-tVb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PoK-99-agX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1744.8" y="810.94452773613204"/>
         </scene>
         <!--Cat Table View Controller-->
         <scene sceneID="U4z-6y-ZEe">
@@ -265,6 +351,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fka-xn-rx2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="64.799999999999997" y="98.50074962518741"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="wsS-Sg-SYI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Qsr-oj-n38" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UDo-4W-ZwB">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="bSH-UF-ylJ" kind="relationship" relationship="rootViewController" id="wD8-1l-mNI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SEL-bx-HD2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1004" y="811"/>
         </scene>
     </scenes>
 </document>
